added subscription and changed icon

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,22 @@
-Hello, world!
+<!doctype html>
+<html>
+
+<head>
+
+    <meta charset="utf-8">
+
+    <title>Maras.co Api</title>
+
+    <meta name="description" content="Mara.co Api">
+
+    <!-- base url -->
+    <base href="/">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+</head>
+
+<body>
+    Hello World!
+</body>
+
+</html>
